# personal-assistant

./: .env-template  .gitignore  README.md  build_requirements.sh  build_venv.sh  chat.py  config.toml  direct-audio-repl-entrypoint.py  efficacy.txt  listen  log.txt  main.py  messages.json  ping-assistant.sh  pyproject.toml  question.py  readme.md  requirements.txt  run.sh  save_requirements.sh  say  sgptb  signal-audio-repl-entrypoint.py  test.py  test.sh
commands/: ask  ass  assistant  auto-gpt  code_assistant  say  start-assistant  talk
logs/: efficacy.txt  log.txt  whisper-log.txt
roles/: assistant.txt  code.json  danny.json  interpreter.json  jester.json  personal.json  sheet.json  short.json
scripts/: commentary.py  config.py  example_instructions.py  hashing.py  instruction_formation.py  langchaintest.py  main copy.py  main.py  play.py  postprocessing.py  query.py  quick_parse.py  quick_test.py  recognition.py  say.py  spin_off.py  substitute_variables.py  test.py  testing-spacy.py  testing_stuff.py  voice_synth.py  xxx.csv  xxx.py
tests/: test_postprocessing.py  tst_query.py  tst_recognition.py  tst_substitude_variables.py  tst_voice_synth.py
unused-scripts/: client.py  live-transcription.py  main copy.py  play.py  server.py  signal_client.sh  whisper-jax-recognition.py  whisper-recognition.py
